[package]
name = "crab-wave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { git = "https://github.com/pyo3/pyo3", features = ["extension-module"] }

[lib]
name = "src"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]