[tool.poetry]
name = "crab-wave"
version = "0.1.0"
description = ""
authors = ["collin <collinlindendrake@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.2.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
